fix overflow on project card overlays

--- a/src/components/portfolio/project/project.module.scss
+++ b/src/components/portfolio/project/project.module.scss
@@ -72,7 +72,7 @@
 
     > div {
         display: grid;
-        grid-template-columns: repeat(4, 1fr);
+        grid-template-columns: repeat(2, 1fr);
         margin: 1em auto;
         gap: 1em
     }
@@ -266,12 +266,6 @@
         max-width: 1644px;
         margin: 0 auto;
 
-        
-
-        // button {
-        //     border: 0;
-        // }
-
         >div:nth-of-type(1) {
             min-height: auto;
             margin: 5em 2em;
@@ -325,31 +319,11 @@
 
     .projControls {
         margin-left: 0em;
-        // position: absolute;
-        // display: flex;
-        // left: 50%;
-        // transform: translateX(-50%);
-        // top: 100%;
-        // width: 100%;
-        // justify-content: space-between;
-        // font-size: 1em;
-        // margin-top: 1em;
-
-
-        // > button {
-        //     @include button-style(var(--primary-color), .5em 1em);
-        //     color: var(--secondary-color);
-        //     box-shadow: var(--box-shadow);
-
-        //     svg {
-        //         margin: 0 .5em;
-        //     }
-        //     transition: background-color 400ms ease-in;
-        // }
-
-        // > button:hover {
-        //     background-color: var(--ascent-color);
-        // }
+    }
+    .projDesc {
+        > div {
+            grid-template-columns: repeat(4, 1fr);
+        }
     }
 }
 
